# mtm_ex3_mtmflix

./: .gitignore  CMakeLists.txt  README.md  main.c  mtmflix.c  ranked_series.c  ranked_series.h  serie.c  serie.h  series.c  series.h  test_utilities.h  user.c  user.h  utilities.c  utilities.h
